--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<main>
 	  <header>
 		<h1>Dennis's Thinkful introduction </h1>
-	<img src="/my-portfolio/images/profile-pic.jpg" width="250px" height="250`" alt="Man and boy showing affection.">
+	<img src="/images/profile-pic.jpg" width="250px" height="250`" alt="Man and boy showing affection.">
 	  </header>
 	  <hr>
 	  <h2>
